--- a/the-project/src/App.css
+++ b/the-project/src/App.css
@@ -18,6 +18,11 @@
   font-size: large;
 }
 
+.btn-margin {
+  margin: 7px 3px;
+}
+
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
