--- a/the-project/src/Home/Home.css
+++ b/the-project/src/Home/Home.css
@@ -1,17 +1,18 @@
-.container {
-  min-height: 100vh;
-  margin: 0px;
-  margin: 5%;
-  /*margin-left: 10px;
-  margin-right: 10px;*/
-  background: url('./city.jpg') no-repeat center center;
+* { 
+    box-sizing: border-box; 
+}
+
+.container-fluid {
+  height: 97vh;
+  width: 98vw;
+  background: url('./scape.jpg') no-repeat center center;
   background-size: cover;
-  background-attachment: fixed;
+  overflow-x: hidden;
+  overflow-y: hidden;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  /*padding: 2em;*/
   -webkit-box-pack: center;
   -webkit-justify-content: center;
       -ms-flex-pack: center;
@@ -21,3 +22,55 @@
       -ms-flex-align: center;
           align-items: center;
 }
+
+.cont {
+  position:relative;
+  left:5px;
+  width:25vw;
+  height:55vh;
+  margin:50px auto;
+  text-align:center;
+  background:rgba(43, 56, 85, 0.5);
+  padding:40px;
+  -webkit-border-radius:20px 0 0 0;
+     -moz-border-radius:20px 0 0 0;
+          border-radius:20px 0 0 0;
+  -webkit-box-shadow: 0px 1px 0px #162252, inset 0px 1px 0px white;
+     -moz-box-shadow: 0px 1px 0px #162252, inset 0px 1px 0px white;
+          box-shadow: 0px 1px 0px #162252, inset 0px 1px 0px white;
+  box-shadow: 10px 10px 10px;
+}
+
+
+h4 {
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif, open sans-serif;
+  font-size:2.5em;
+  font-weight:400;
+  text-align: center;
+  margin-bottom:15px;
+  color:white;
+  text-shadow:1px 1px 0px #2d7baf;
+}
+
+.button {
+  position:relative;
+  /*float:bottom;*/
+  width:145px;
+  margin-top:30px;
+  top: 80%;
+  background:#00BFFF;
+  color:#fff;
+  font-weight:400;
+  text-shadow:1px 1px 0px #2d7baf;
+  box-shadow:0px 3px 0px #2d7baf;
+  -webkit-transition: all .3s ease-in-out;
+     -moz-transition: all .3s ease-in-out;
+          transition: all .3s ease-in-out;
+}
+
+
+.button1 {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+}
+
+
