--- a/the-project/src/components/AuthComp/App.css
+++ b/the-project/src/components/AuthComp/App.css
@@ -1,7 +1,26 @@
 * { 
   box-sizing: border-box; 
   }
-
+.container-fluid {
+  height: 100vh;
+  width: 100vw;
+  background: url('./scape.jpg') no-repeat center center;
+  background-size: cover;
+  overflow-x: hidden;
+  overflow-y: hidden;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
 .cont {
   position:relative;
   left:5px;
