--- a/the-project/src/components/AuthComp/App.css
+++ b/the-project/src/components/AuthComp/App.css
@@ -51,10 +51,8 @@ h4 {
 
 .button {
   position:relative;
-  /*float:bottom;*/
-  width:145px;
-  margin-top:30px;
-  padding-top: 10px;
+  width:75%;
+  padding: 10px;
   top: 80%;
   background:#00BFFF;
   color:#fff;
