--- a/the-project/src/components/AuthComp/App.css
+++ b/the-project/src/components/AuthComp/App.css
@@ -39,7 +39,7 @@
   box-shadow: 20px 20px 20px;
 }
 
-h4 {
+.adminti {
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif, open sans-serif;
   font-size:2.5em;
   font-weight:400;
