--- a/the-project/src/components/AuthComp/App.css
+++ b/the-project/src/components/AuthComp/App.css
@@ -39,10 +39,11 @@
   box-shadow: 20px 20px 20px;
 }
 
-.adminti {
+h5 {
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif, open sans-serif;
   font-size:2.5em;
   font-weight:400;
+  text:white;
   text-align: center;
   margin-bottom:15px;
   color:white;
